--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                class="bg-transparent border-b border-gray-300 dark:border-gray-600 focus:border-blue-500 outline-none text-lg font-bold uppercase text-blue-600 dark:text-blue-400 w-32 transition-colors px-1" 
                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Ticker'">
                     </div>
-                    <p class="text-xs text-gray-500 dark:text-gray-400">v5.2</p>
+                    <p class="text-xs text-gray-500 dark:text-gray-400">v5.3</p>
                 </div>
             </div>
             
@@ -388,9 +388,14 @@
                 <h3 class="text-sm font-bold text-orange-500 mb-2 uppercase tracking-wide">2. Actions (Repair)</h3>
                 <div class="space-y-3">
                     <div class="input-group">
-                        <label>Sell Shares (Wash Sale) 📉</label>
+                        <label>
+                            Sell Shares (Wash Sale) 📉
+                            <div class="tooltip-container">
+                                <svg class="w-4 h-4 tooltip-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                <div class="tooltip-text">Realize loss for taxes / free up cash</div>
+                            </div>
+                        </label>
                         <input type="number" id="avg_sellCount" value="0" placeholder="0" class="border-red-300 dark:border-red-900 focus:border-red-500" oninput="calculateAveraging()">
-                        <p class="text-xs text-gray-500 mt-1">Realize loss for taxes / free up cash</p>
                     </div>
                     <div class="input-group">
                         <label>Buy Shares 📈</label>
